Iterate citations and fix svg width on IE

--- a/source/_sass/_page-section.scss
+++ b/source/_sass/_page-section.scss
@@ -119,6 +119,7 @@
             }
             img {
               height: 2rem;
+              max-width: 2rem;
               padding: 0 0.1rem 0 0.1rem;
             }
           }
