--- a/source/_sass/_process-page.scss
+++ b/source/_sass/_process-page.scss
@@ -60,6 +60,7 @@
         white-space: nowrap;
         svg {
           height: 2rem;
+          max-width: 3rem;
           padding-right: 1rem;
         }
       }
